--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+</head>
+<body>
+<div>
+
       <h1 class="pt-5 pb-2">Covid Data</h1>
 
-	  <!--<p class="ml-4"><a href="{{ url_for('index') }}"></a></p> -->
+	  <p class="ml-4"><a href="{{ url_for('index') }}"></a></p>
 
 		<table class="table">
 			<tr>
@@ -20,3 +30,8 @@
 			</tr>
 			{% endfor %}
 		</table>
+
+</div>
+
+</body>
+</html>
