--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,37 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-</head>
 <body>
-<div>
-
-      <h1 class="pt-5 pb-2">Covid Data</h1>
-
-	  <p class="ml-4"><a href="{{ url_for('index') }}"></a></p>
-
-		<table class="table">
-			<tr>
-				<th>Observation Date</th>
-				<th>State</th>
-				<th>Confirmed</th>
-				<th>Deaths</th>
-				<th>Recovered</th>
-			</tr>         
+    <table class="table">
+		<tr>
+			<th>Observation Date</th>
+			<th>State</th>
+			<th>Confirmed</th>
+			<th>Deaths</th>
+			<th>Recovered</th>
+		</tr>         
 		    {% for virus in covid %}
 			<tr>
 				<td>{{ virus.ObservationDate }}</td>
 				<td>{{ virus.State }}</td>
 				<td>{{ virus.Confirmed }}</td>
-				<td>{{ Virus.Deaths }}</td>
+				<td>{{ virus.Deaths }}</td>
 				<td>{{ virus.Recovered }}</td>
 			</tr>
 			{% endfor %}
 		</table>
-
-</div>
-
 </body>
 </html>
